implement routes and tests for first route
