# pet-shelter.openapi.yaml
@@ -42,6 +42,8 @@ paths:
                 pet:
                   $ref: '#/components/schemas/Pet'
       responses:
+        409:
+          description: Name and Breed are not unique
         201:
           description: Created
           content:
@@ -60,6 +62,8 @@ paths:
         required: true
     get:
       responses:
+        404:
+          description: Not Found
         200:
           description: Ok
           content:
@@ -83,7 +87,12 @@ components:
           type: string
         breed:
           type: string
-        latitude:
-          type: number
-        longitude:
-          type: number
+        location:
+          type: object
+          properties:
+            type:
+              enum: ['Point']
+            coordinates:
+              type: array
+              items:
+                type: number
